@@ -215,6 +215,9 @@ public:
         }
     }
 
+    // return the index of the given page or wxNOT_FOUND
+    int FindPage(const wxWindow* page) const;
+
     // hit test: returns which page is hit and, optionally, where (icon, label)
     virtual int HitTest(const wxPoint& WXUNUSED(pt),
                         long * WXUNUSED(flags) = NULL) const
